--- a/style.css
+++ b/style.css
@@ -3,25 +3,322 @@
     box-sizing: border-box;
 }
 
+i:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+
 .bg-lightpink {
     background-color: #ffdecb;
 }
 
-.color-df {
+.bg-pink {
+    background-color: #FFBF9B;
+}
+
+.bg-main {
+    background-color: #F9F5EB;
+}
+
+.c-df {
     color: #4d4d4d;
 }
 
-#top-header {
-    width: 100vw;
+.fx-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.fx-row {
     display: flex;
     flex-direction: row;
+}
+
+
+#top-header {
+    width: 100vw;
+    justify-content: space-between;
+    padding: 5px;
+    align-items: center;
+}
+
+
+#filter-line {
+    align-items: center;
+    justify-content: space-between;
+    padding: 0% 10%;
+    gap: 1px;
+    flex-wrap: nowrap;
+}
+
+.categories {
+    height: 100%;
+}
+
+.btn-category {
+    min-width: fit-content;
+    border: 1px solid black;
+    border-radius: 15px;
+    padding: 0.5ch 2ch;
+    height: 100%;
+    background-color: #FFBF9B;
+}
+
+.btn-category:hover,
+.btn-category.chosen {
+    background-color: #ffdecb;
+}
+
+.iconsDiv {
+    gap: 5px;
+}
+
+/* card style: */
+.mainTitle {
+    padding: 10px;
+    justify-content: center;
+}
+
+#show-zone {
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
+    justify-content: space-evenly;
+}
+
+.card {
+    min-width: 200px;
+    width: 30vw;
+    max-width: 300px;
+    min-height: 250px;
+    height: fit-content;
+    max-height: 400px;
+
+    box-shadow: 2px 2px 2px 2px grey;
+
+    border-radius: 10px;
+    align-items: center;
+    align-content: center;
     justify-content: space-between;
 }
 
+.product-image-container {
+    width: 100%;
+    height: fit-content;
+    padding: 5px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: white;
+    text-align: center;
+}
+
+.card-title {
+    padding-top: 10px;
+    text-align: center;
+}
+
+hr {
+    margin: 10px;
+    width: 90%;
+}
+
+.card #iconsDiv {
+    width: 90%;
+    padding: 10px;
+}
+
+.card i {
+    border-radius: 50%;
+    border: 1px solid #E4DCCF;
+    padding: 3px;
+}
+
+.card i:hover {
+    background-color: #F9F5EB;
+}
+
+.quantityBar {
+    gap: 10px;
+    justify-content: space-around;
+    align-content: center;
+}
+#quantity {
+    background-color: #FFBF9B ;
+    padding-top: 7px;
+}
+.quantityBar * {
+    border-radius: 50%;
+    border: 1px solid black;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+}
+
+i#star.material-icons {
+    border-radius: 50%;
+    margin-left: 40%;
+    background-color: transparent;
+    color: #F9F5EB;
+}
+
+/* single product page: */
+#show-zone .single-product {
+    border: 3px solid grey;
+    border-radius: 20px;
+    width: 90vw;
+    height: 80vh;
+    align-items: center;
+}
+
+#show-zone i {
+    background-color: #F9F5EB;
+}
+
+#show-zone i:hover {
+    background-color: #E4DCCF;
+}
+
+.mainTitle span {
+    width: 100%;
+    text-align: center;
+}
+
+.single-product .product-image-container {
+    height: 100%;
+    width: 40%;
+    line-height: 100%;
+    border-radius: 20px 0 0 20px;
+    position: relative;
+}
+
+.single-product .product-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#description {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+
+#description * {
+    width: 90%;
+}
+
+#description h4 {
+    margin-top: 10px;
+}
+
+#description p {
+    font-size: medium;
+}
+
+/* end single product: */
+
+/* add product */
+#addProduct {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+}
+
+#addProduct input,
+#addProduct textarea {
+    display: block;
+    width: 85%;
+    margin-left: 10%;
+}
+
+/* end add product */
+
+/* search div: */
+#search-box {
+    position: relative;
+    height: 100%;
+    margin: 4px 0px;
+}
+
+#search-box input {
+    border: none;
+    border-radius: 10px 0px 0px 10px;
+    background-color: #ffff;
+    padding: 0.5ch 1.5ch 0.5ch 1.5ch;
+    width: 18ch;
+    outline: none;
+}
+
+#search-box button {
+    border: none;
+    border-radius: 0px 10px 10px 0px;
+    background-color: #ffff;
+    background-color: #f0f0f0;
+}
+
+#search-box button:hover {
+    background-color: #d9d9d9;
+}
+
+/* end search div */
+
+
 footer {
     margin: auto;
-    position: fixed;
+    width: 100vw;
     bottom: 0;
-    transform: translate(0, -100%);
+    left: 0;
     background-color: #4d4d4d;
+    gap: 20px;
+    justify-content: center;
+    padding: 5px;
+    line-height: 30px;
 }
+
+footer span {
+    border: 1px solid black;
+    border-radius: 50%;
+    padding: 2.5px;
+    width: 30px;
+    height: 30px;
+}
+
+/* auto compleat styling */
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+
+.autocomplete-items {
+    position: absolute;
+    top: 100%;
+    width: 15ch;
+    height: 30ch;
+    z-index: 99;
+    border-radius: 10px;
+}
+
+.autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+    background-color: #e9e9e9;
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+    background-color: DodgerBlue !important;
+    color: #ffffff;
+}
+
+/* end auto complit style */
